# HALSPA-ui-pico

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  memory.x  run
.cargo/: config.toml
docs/solutions/runtime-errors/: pico-gpio2-hardware-fault-workaround-2026-04-20.md
src/: buzzer.rs  command.rs  led.rs  main.rs  pins.rs
